--- a/anime-details.html
+++ b/anime-details.html
@@ -19,11 +19,15 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+
+    <script src="./js/modal.js" defer></script>
+    <script src="./js/scrollToTop.js" defer></script>
+    <script src="./js/detailData.js" defer></script>
 </head>
 
 <body>
     <!-- Page Preloder -->
-    <div id="preloder" class="preloder">
+    <div id="preloder" class="preloder active">
         <div class="loader"></div>
     </div>
 
@@ -105,9 +109,9 @@
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6">
                                         <ul>
-                                            <li><span>Date aired:</span> Oct 02, 2019 to ?</li>
-                                            <li><span>Status:</span> Airing</li>
-                                            <li><span>Genre:</span> Action, Adventure, Fantasy, Magic</li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
                                         </ul>
                                     </div>
                                     <div class="col-lg-6 col-md-6">
@@ -141,12 +145,6 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-3">
-                        <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                          Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-
-                      </div>
                   </div>
               </div>
           </footer>
@@ -164,6 +162,7 @@
         <!-- Search model end -->
 
         <!-- Js Plugins -->
+        <script src="https://cdn.jsdelivr.net/npm/seamless-scroll-polyfill@latest"></script>
     </body>
 
     </html>
