--- a/categories.html
+++ b/categories.html
@@ -27,7 +27,7 @@
 
 <body>
     <!-- Page Preloder -->
-    <div id="preloder" class="preloder">
+    <div id="preloder" class="preloder active">
         <div class="loader"></div>
     </div>
 
@@ -142,10 +142,6 @@
     <!-- Search model end -->
 
     <!-- Js Plugins -->
-    <script>
-        const params = new URLSearchParams(window.location.search)
-        console.log(params.get("ganre"));
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/seamless-scroll-polyfill@latest"></script>
 </body>
 
