--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     <link rel="stylesheet" href="css/elegant-icons.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
 
-    <script src="./js/preloader.js" defer></script>
     <script src="./js/bg-elements.js" defer></script>
     <script src="./js/modal.js" defer></script>
     <script src="./js/scrollToTop.js" defer></script>
@@ -38,7 +37,7 @@
 
   <body>
     <!-- Page Preloder -->
-    <div id="preloder" class="preloder">
+    <div id="preloder" class="preloder active">
       <div class="loader"></div>
     </div>
 
